kubernetes/testnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: algo-set-service
  namespace: algorand
spec:
  type: NodePort
  selector:
    app: relaynode-app-ss
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 4161
      targetPort: 4161
      nodePort: 4161
